<resources>
    <string name="app_name">OmniMarket</string>
    <string name="username">Username</string>
    <string name="welcome_to_omnimarket_n_user_name">Welcome to OmniMarket, \n [User.name]</string>
    <string name="past_orders">Past Orders</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="shop">Shop</string>
    <string name="logout">Logout</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="enter_information_to_sign_up">Enter Information to Sign Up</string>
    <string name="username_signup">Username</string>
    <string name="name_signup">Name</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="login_signup">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_signup">Password</string>
    <string name="welcome_to_the_omnimarket">Welcome to the OmniMarket,\n</string>
    <string name="delete_user">Delete User</string>
    <string name="item_display">Item Display</string>
    <string name="home">Home</string>
    <string name="available_on_the_market">Available on the Market</string>
    <string name="find_item">Find Item</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="find">Find</string>
    <string name="item_name">Item Name</string>
    <string name="items_go_here">ITEMS GO HERE</string>
    <string name="type_the_item_name">Type the item name</string>
    <string name="home_from_pastOrders">Home</string>
    <string name="past_orders_ndisplayed_here">Past Orders\nDisplayed Here</string>
    <string name="no_items_purchased">NO ITEMS PURCHASED!</string>
    <string name="pastorders_displayed">pastOrders Displayed</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_1">Remove 1</string>
    <string name="workers_may_or_may_not_have_been_harmed_in_getting_these_items_n_on_the_side_note_we_are_hiring">Workers may or may not have been harmed in getting these items. \n On the side note, we are Hiring!</string>
    <string name="please_log_in">Please Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here">New Here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="omnimarket">OmniMarket</string>
    <string name="admin_menu_n">Admin Menu\n</string>
    <string name="view_users">View Users</string>
    <string name="view_items">View Items</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="home_admin">Home</string>
    <string name="workers_may_or_may_not_have_been_harmed_obtaining_these_items_non_the_other_hand_we_are_hiring">Workers May or May Not Have Been Harmed Obtaining These Items \nOn The Other Hand, We Are Hiring!</string>
</resources>