<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.HomeScreen">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/welcome_to_the_omnimarket"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/past_orders_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="25dp"
        android:height="70dp"
        android:width="160dp"
        android:gravity="center"
        android:text="@string/past_orders"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:width="160dp"
        android:height="70dp"
        android:gravity="center"
        android:text="@string/find_item"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/past_orders_button"
        app:layout_constraintTop_toTopOf="@+id/past_orders_button" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:width="250dp"
        android:height="70dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/past_orders_button"
        app:layout_constraintTop_toBottomOf="@id/past_orders_button" />

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="216dp"
        android:width="110dp"
        android:height="55dp"
        android:gravity="center"
        android:text="@string/delete_user"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_button" />

    <Button
        android:id="@+id/admin_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="216dp"
        android:width="110dp"
        android:height="55dp"
        android:gravity="center"
        android:text="@string/admin_mode"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_button"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="83dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:srcCompat="@drawable/portal_img" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageForUser"
        android:text="@string/workers_may_or_may_not_have_been_harmed_obtaining_these_items_non_the_other_hand_we_are_hiring"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/delete_user_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/green"/>

</androidx.constraintlayout.widget.ConstraintLayout>