<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pastOrder_to_home"
        android:text="@string/home_from_pastOrders"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/past_orders_text"
        android:text="@string/past_orders_ndisplayed_here"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pastOrder_to_home"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/scroll_pastOrders"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/pastOrders_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:width="400dp"
            android:height="500dp"
            android:gravity="center_vertical"
            android:hint="@string/pastorders_displayed"
            android:orientation="vertical"
            android:textSize="20sp"
            />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>